# fastapi_education

./: .env_example  .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: __main__.py
src/api/common/: docs.py
src/api/common/providers/: __init__.py  stub.py
src/api/v1/: __init__.py  dependencies.py  setup.py
src/api/v1/endpoints/: __init__.py  auth.py  setup.py  user.py
src/api/v1/handlers/: __init__.py  auth.py
src/api/v1/handlers/user/: __init__.py  create.py  get_from_login.py
src/common/dto/: __init__.py  base.py  user.py
src/common/interfaces/: __init__.py  crud.py  gateway.py  hasher.py
src/common/tools/: __init__.py  singleton_tool.py
src/core/: __init__.py  logger.py  server_uvicorn.py  settings.py
src/database/: __init__.py  converter.py  factory.py  gateway.py
src/database/core/: __init__.py  connection.py  manager.py
src/database/migrations/: env.py
src/database/migrations/versions/: 3fc06ae7bd95_added_user_table.py
src/database/models/: __init__.py  user.py
src/database/models/base/: __init__.py  core.py
src/database/models/base/mixins/: __init__.py
src/database/repositories/: __init__.py  base.py  crud.py  user.py
src/services/: __init__.py  gateway.py  gateway_factory.py  user_db.py
src/services/security/: __init__.py  auth.py  bcrypt_hasher.py  token_jwt.py
